src/assets/css/app.css
/* ... */
button.vjs-play-control.vjs-control.vjs-button {
	margin-left: 40px;
}
@media screen and (max-width: 625px) {
	button.vjs-play-control.vjs-control.vjs-button {
		margin-left: 0;
	}
}

.vjs-icon-fullscreen-enter:before,
.video-js .vjs-fullscreen-control:before {
	content: '';
	position: absolute;
	display: block;
	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='20' height='20' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill-rule='evenodd' clip-rule='evenodd' d='M2.54 0h3.38c1.41 0 2.54 1.15 2.54 2.561V5.97c0 1.42-1.13 2.56-2.54 2.56H2.54C1.14 8.53 0 7.39 0 5.97V2.561C0 1.15 1.14 0 2.54 0zm0 11.47h3.38c1.41 0 2.54 1.14 2.54 2.56v3.41c0 1.41-1.13 2.56-2.54 2.56H2.54C1.14 20 0 18.85 0 17.44v-3.41c0-1.42 1.14-2.56 2.54-2.56zM17.46 0h-3.38c-1.41 0-2.54 1.15-2.54 2.561V5.97c0 1.42 1.13 2.56 2.54 2.56h3.38c1.4 0 2.54-1.14 2.54-2.56V2.561C20 1.15 18.86 0 17.46 0zm-3.38 11.47h3.38c1.4 0 2.54 1.14 2.54 2.56v3.41c0 1.41-1.14 2.56-2.54 2.56h-3.38c-1.41 0-2.54-1.15-2.54-2.56v-3.41c0-1.42 1.13-2.56 2.54-2.56z' fill='%23fff'/%3e%3c/svg%3e");
	background-size: 11px;
	background-position: center;
	background-position-y: 14px;
	background-repeat: no-repeat;
	opacity: 0.6;
}

.vjs-playback-rate .vjs-playback-rate-value {
	font-size: 1.1em;
	line-height: 3.5em;
	opacity: 0.6;
	font-weight: 700;
	font-family: var(--body-font);
}

.video-js .vjs-playback-rate {
	width: 2.2em;
}

.video-js.vjs-fluid {
	border-radius: 20px;
	overflow: hidden;
	min-height: 414px;
}

@media screen and (max-width: 735px) {
	.main-blogs {
		flex-wrap: wrap;
	}

	.main-blog,
	.main-blog + .main-blog {
		flex-wrap: wrap;
		width: 100%;
	}

	.videos {
		grid-template-columns: 1fr;
	}

	.main-blog + .main-blog {
		margin-left: 0;
		margin-top: 20px;
		background-size: cover;
	}
}
@media screen and (max-width: 475px) {
	.main-blog__title {
		font-size: 20px;
	}

	.author-name {
		font-size: 14px;
	}

	.main-blog__author {
		flex-direction: column-reverse;
		align-items: flex-start;
	}

	.author-detail {
		margin-left: 0;
	}

	.main-blog .author-img {
		margin-top: 14px;
	}

	.main-container {
		padding: 0 20px 20px;
	}

	.header {
		padding: 20px;
	}

	.sidebar.collapse {
		width: 40px;
	}

	.sidebar {
		align-items: center;
	}

	body {
		padding: 0;
	}

	.container {
		height: 100vh;
		border-radius: 0;
		max-height: 100%;
	}
}
::-webkit-scrollbar {
	width: 6px;
	border-radius: 10px;
}

::-webkit-scrollbar-thumb {
	background-color: rgba(21, 20, 26, 0.63);
	border-radius: 10px;
}
.map-img {
	border-radius: 20px;
	overflow: hidden;
	min-height: 414px;
	width: auto;
}

.map-details-icon {
	width: 15px;
}
.pagination-container {
	width: 300px; /* Set the width of the container */
	margin: 2rem auto;
	border-radius: 0.2rem;
	text-align: center;
	margin-bottom: auto;
}

.pagination-container ul {
	display: flex;
	justify-content: center;
	padding: 0;
}

li {
	list-style: none;
	margin-right: 5px;
}

.prev-nav-group {
	margin-right: 15px; /* Adjust the margin as needed for space between groups */
}

.next-nav-group {
	margin-left: 15px; /* Adjust the margin as needed for space between groups */
}

li:hover a,
li.active a {
	color: #ffffff;
	background-color: #32a7e2;
}

li a {
	background: #353340;
	border-radius: 10px;
	color: #808191;
	text-decoration: none;
	text-transform: uppercase;
	display: inline-block;
	text-align: center;
	padding: 0.5rem 0.9rem;
	cursor: pointer;
}

li:hover button,
li.active button {
	color: #ffffff;
	background-color: #32a7e2;
}

li button {
	background: #353340;
	border-radius: 10px;
	color: #808191;
	text-decoration: none;
	text-transform: uppercase;
	display: inline-block;
	text-align: center;
	padding: 0.5rem 0.9rem;
	cursor: pointer;
	border: none;
	font: inherit;
}

li.text-only {
	margin: 8px 0;
}

.browse-filter-container {
	font-size: 14px;
	font-weight: 500;
	color: #fff;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: flex-end;
}

.filter-container {
	display: flex;
	align-items: center;
	margin-bottom: 20px;
}
.filter-text {
	text-transform: uppercase;
	color: #b4b4b4;
	margin-right: 20px;
	color: #fff;
}
.dropdown-el {
	font-size: 14px;
	padding: 7px;
	position: relative;
	display: inline-block;
	margin-right: 1em;
	text-align: left;
	color: #808191;
	border: 0.06em solid transparent;
	border-radius: 8px;
	background-color: $color;
	background-color: var(--button-bg);
}

